[gd_scene load_steps=5 format=3 uid="uid://bi3maar4f7ltv"]

[ext_resource type="Script" uid="uid://jir4c8xkkr52" path="res://src/ui/inventory/inventory_slot.gd" id="1_aiprx"]
[ext_resource type="Texture2D" uid="uid://eeobrjxbuowc" path="res://src/ui/resources/button-bg.png" id="2_pongt"]
[ext_resource type="PackedScene" uid="uid://dvug3f6e36er6" path="res://src/ui/icon_label.tscn" id="3_4m7xu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l443k"]
texture = ExtResource("2_pongt")

[node name="InventorySlot" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxTexture_l443k")
script = ExtResource("1_aiprx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_pongt")
expand_mode = 1
stretch_mode = 4

[node name="MarginIcon" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="IconLabel" parent="MarginIcon" instance=ExtResource("3_4m7xu")]
layout_mode = 2
text = "[img={20}]res://src/ui/resources/control_icons/E.png[/img]"
single_icon = true
